temporarily removed most header functional, fixed title on mobile devices

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -389,8 +389,8 @@ p {
   .appTitle {
     color: black;
     font-weight: bolder;
-    font-size: 15px;
-    margin-left: -20px;
+    font-size: 25px;
+    margin-left: -40px;
     text-shadow:
     -1px -1px 0 rgba(255, 255, 255, 0),
     1px 1px 0 rgba(0,0,0,.25),
